--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,8 @@
       name="description"
       content="shazeen fabius software engineer web development JavaScript react css html"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/shaz.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
